--- a/epr.tex
+++ b/epr.tex
@@ -29,7 +29,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\labauthors{Сарафанов Ф.Г., Платонова М.В.}
+\def\labauthors{Есюнин Д.В., Есюнин М.В.}
 \def\labgroup{440}
 % \def\department{Кафедра электроники и квантовой физики}
 \def\labnumber{1}
