Внес свои данные, исправил пару опечаток.

--- a/epr.tex
+++ b/epr.tex
@@ -33,20 +33,20 @@
 \def\labgroup{440}
 % \def\department{Кафедра электроники и квантовой физики}
 \def\labnumber{1}
-\def\labtheme{}
+\def\labtheme{Исследование твердотельных структур \\[0.2em] методом ЭПР-спектроскопии}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	%применим колонтитул к стилю страницы
+%применим колонтитул к стилю страницы
 \pagestyle{fancy} 
-	%очистим "шапку" страницы
+%очистим "шапку" страницы
 \fancyhead{} 
-	%слева сверху на четных и справа на нечетных
+%слева сверху на четных и справа на нечетных
 \fancyhead[L]{\labauthors} 
-	%справа сверху на четных и слева на нечетных
-\fancyhead[R]{Электронно-парамагнитный резонанс} 
-	%очистим "подвал" страницы
+%справа сверху на четных и слева на нечетных
+%\fancyhead[R]{Отчёт по лабораторной работе №\labnumber} 
+%очистим "подвал" страницы
 \fancyfoot{} 
-	% номер страницы в нижнем колинтуле в центре
+% номер страницы в нижнем колинтуле в центре
 \fancyfoot[C]{\thepage} 
 \renewcommand{\phi}{\varphi}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -58,51 +58,51 @@
 \usepackage{tikz,csvsimple}
 \usetikzlibrary{scopes}
 \usetikzlibrary{%
-     decorations.pathreplacing,%
-     decorations.pathmorphing,%
-    patterns,%
-    calc,%
-    scopes,%
-    arrows,%
-    % arrows.spaced,%
+	decorations.pathreplacing,%
+	decorations.pathmorphing,%
+	patterns,%
+	calc,%
+	scopes,%
+	arrows,%
+	% arrows.spaced,%
 }
 \makeatletter
 \newif\if@gather@prefix 
 \preto\place@tag@gather{% 
-  \if@gather@prefix\iftagsleft@ 
-    \kern-\gdisplaywidth@ 
-    \rlap{\gather@prefix}% 
-    \kern\gdisplaywidth@ 
-  \fi\fi 
+	\if@gather@prefix\iftagsleft@ 
+	\kern-\gdisplaywidth@ 
+	\rlap{\gather@prefix}% 
+	\kern\gdisplaywidth@ 
+	\fi\fi 
 } 
 \appto\place@tag@gather{% 
-  \if@gather@prefix\iftagsleft@\else 
-    \kern-\displaywidth 
-    \rlap{\gather@prefix}% 
-    \kern\displaywidth 
-  \fi\fi 
-  \global\@gather@prefixfalse 
+	\if@gather@prefix\iftagsleft@\else 
+	\kern-\displaywidth 
+	\rlap{\gather@prefix}% 
+	\kern\displaywidth 
+	\fi\fi 
+	\global\@gather@prefixfalse 
 } 
 \preto\place@tag{% 
-  \if@gather@prefix\iftagsleft@ 
-    \kern-\gdisplaywidth@ 
-    \rlap{\gather@prefix}% 
-    \kern\displaywidth@ 
-  \fi\fi 
+	\if@gather@prefix\iftagsleft@ 
+	\kern-\gdisplaywidth@ 
+	\rlap{\gather@prefix}% 
+	\kern\displaywidth@ 
+	\fi\fi 
 } 
 \appto\place@tag{% 
-  \if@gather@prefix\iftagsleft@\else 
-    \kern-\displaywidth 
-    \rlap{\gather@prefix}% 
-    \kern\displaywidth 
-  \fi\fi 
-  \global\@gather@prefixfalse 
+	\if@gather@prefix\iftagsleft@\else 
+	\kern-\displaywidth 
+	\rlap{\gather@prefix}% 
+	\kern\displaywidth 
+	\fi\fi 
+	\global\@gather@prefixfalse 
 } 
 \newcommand*{\beforetext}[1]{% 
-  \ifmeasuring@\else
-  \gdef\gather@prefix{#1}% 
-  \global\@gather@prefixtrue 
-  \fi
+	\ifmeasuring@\else
+	\gdef\gather@prefix{#1}% 
+	\global\@gather@prefixtrue 
+	\fi
 } 
 \makeatother
 
@@ -132,43 +132,35 @@
 \renewcommand{\vec}{\mathbf} % for parts
 
 \begin{document}
+
 \begin{titlepage}
-\begin{center}
-% \vspace{-3em}
-{\small\textsc{Нижегородский государственный университет имени Н.\,И. Лобачевского}}
-\vskip 2pt \hrule \vskip 3pt
-{\small\textsc{Радиофизический факультет}}
-
-\vfill
-
-
-{{\large Отчет по лабораторной работе}\vskip 12pt {\LARGE \bfseries Исследование твердотельных структур \\[0.2em] методом ЭПР-спектроскопии}}
-
 	
-\vspace{2cm}
-{\large Работу выполнили студенты \\[-0.25em] 440 группы радиофизического факультата \\[0.5em] {\Large \bfseries \labauthors}}
-
-% \vspace{0.5cm}
-% {e-mail: sfg180@yandex.ru}
-
-% \vspace{2cm}
-
-\end{center}
-
-\vfill
+	\begin{center}
+		
+		
+		\textsc{Нижегородский государственный университет имени Н.\,И. Лобачевского}
+		\vskip 4pt \hrule \vskip 8pt
+		\textsc{Радиофизический факультет}
+		
+		\vfill
+		
+		{\Large\labtheme}
+		
+	\end{center}
 	
-% \begin{flushright}
-% 	{Выполнили студенты 430 группы\\ \labauthor}%\vskip 12pt Принял:\\ Менсов С.\,Н.}
-% \end{flushright}
+	\vfill
 	
-% \vfill
+	\begin{flushright}
+		{Работу выполнили студенты\\ \labauthors\\ 440 группы}
+	\end{flushright}
 	
-\begin{center}
-	{Нижний Новгород, 15 октября -- \today}
-\end{center}
-
+	\vfill
+	
+	\begin{center}
+		Нижний Новгород, \the\year
+	\end{center}
 \end{titlepage}
-\tableofcontents
+%\tableofcontents
 \newpage
 
 
@@ -200,12 +192,12 @@
 
 Перед началом измерений была проведена настройка тракта, как это описано в выше в введении. После настройки частота СВЧ-колебаний в тракте составила
 \begin{equation}
-  f_1=7.982 \text{ ГГц}
+  f_1=9.13 \text{ ГГц}
 \end{equation}
-Далее был включён электромагнит, задающий постоянное магнитное поле. Измерение тока через катушки электромагнита при наблюдении резонансного перехода на осциллограмме позволяет найти по градуировочной характеристике электромагнита $H(I)=17.5\cdot I+ 187.5$ резонансное значение поля:
+Далее был включён электромагнит, задающий постоянное магнитное поле. Измерение тока через катушки электромагнита при наблюдении резонансного перехода на осциллограмме позволяет найти по градуировочной характеристике электромагнита резонансное значение поля:
 \begin{equation}
-  I_\text{рез}=0.131 \text{ А}  \quad\Rightarrow\quad
-  H_\text{рез}=2480 \text{ Гс}
+  I_\text{рез}=0.167\pm 0.01 \text{ А}  \quad\Rightarrow\quad
+  H_\text{рез}=3700\pm 22\text{ Гс}
 \end{equation}
 
 \subsection{Кривые поглощения и дисперсии сигнала ЭПР}
@@ -213,21 +205,22 @@
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.49\linewidth]{fig/xi_s.png}
-    \includegraphics[width=0.49\linewidth]{fig/xi_ss.png}
+    \includegraphics[width=0.49\linewidth]{photo/absorption_curve.jpg}
+    \includegraphics[width=0.49\linewidth]{photo/dispersion_curve.jpg}
     \caption{Кривая $\chi'$, кривая $\chi''$}
     \label{fig:2}
 \end{figure}
 
 \subsection{Измерение ширины линии поглощения сигнала ЭПР}
 
-Для измерения ширины в единицах поля было необходимо сопоставить масштабы развертки осциллографа и значения магнитного поля. Известно, что максимум сигнала смещается на величину, пропорциональную изменению постоянного магнитного поля. 
+Для измерения ширины в единицах поля было необходимо проградуировать шкалу развертки осциллографа в единицах магнитного поля. Сигнал смещается по горизонтальной оси на величину, пропорциональную изменению постоянного магнитного поля. 
 
-Поместив сигнал в центре при некотором значении поля и сместив его на одну клетку на экране осциллографа, можно зафиксировать второе значение поля и произвести пересчёт.  Для данной установки пересчёт показал, что одна клетка развертки соответствует 35 Гс.
+Определяя соответствующие изменения поля $H_0$ по известной зависимости поля от тока $H_0(I)$, можно найти численный коэффициент связи (коэффициент пропорциональности) между изменением поля $\Delta H_0$ и относительном смещением любой точки сигнала по горизонтальной шкале осциллографа $\Delta L$.
 
-При этом измерение сигнала на половине высоты даёт ширину линии поглощения в единицах развертки 0.5 клетки, или в единицах поля
+При смещении сигнала на $\Delta L=30 \text{ делений}$ изменение тока составило $\Delta I=0,009 \text{ А}$, что соответствует изменению поля $\Delta H_0=200 \text{ Гс}$. Ширина линии поглощения в единицах развертки составляет $\delta L=2 \text{ деления}$, а в единицах поля 
+
 \begin{equation}
-  \delta H = 17.5 \text{ Гс}
+  \delta H = \frac{\Delta H\cdot \delta L}{\Delta L}=\frac{200 Гс\cdot 2}{30}\approx 13 \text{ Гс}
 \end{equation}
 
 \subsection{Расчет ширины линии в единицах частоты}
@@ -240,11 +233,11 @@
 \begin{equation}
   \hbar \omega = g \beta_B H,
 \end{equation}
-где $g$-фактор для дифенила можно принять равным двум \cite[стр. 16]{mar}, тогда практические значение ширины линии и время поперечной релаксации
+где $g$-фактор для дифенила можно принять равным двум \cite[стр. 16]{mar}, тогда экспериментальное значение ширины линии и время поперечной релаксации
 \begin{equation}
-  \delta \omega = \frac{g\beta_B}{\hbar} \delta H = \frac{|e|}{m_e c} \delta H = 3.07 \cdot 10^8 \,\,\frac{\text{рад}}{\text{с}}
+  \delta \omega = \frac{g\beta_B}{\hbar} \delta H = \frac{|e|}{m_e c} \delta H = 2.34 \cdot 10^8 \,\,\frac{\text{рад}}{\text{с}}
   \quad \Rightarrow \quad
-  T_2 \approx 6.5 \text{ нс}
+  T_2 \approx 8.6 \text{ нс}
 \end{equation}
 и теоретические 
 \begin{equation}
@@ -255,7 +248,7 @@
 
 Из сравнения полученных данных и рассчитанных теоретически, можно заключить, что в эксперименте присутствовало неоднородное уширение линии. 
 
-\subsection{Определение числа парамагнитных частиц в образце}
+\subsection{Определение числа парамагнитных частиц в образце, помещенном в резонатор}
 
 При такой настройке балансного плеча, что наблюдается кривая поглощения $\chi''$, детектированный ток имеет вид \cite[стр. 33]{mar}
 \begin{equation}
@@ -263,8 +256,7 @@
     i_{\text{дет}} \simeq S P_n \cdot 4 \pi Q \eta \chi''.
 \end{equation}
 
-Введем технический коэффициент $A$, характеризующий коэффициент усиления тракта <<детектор-усилитель-осциллограф>>. Его величину можно измерить, подавая известный по величине модулированный СВЧ-сигнал на детекторную головку и измеряя при этом амплитуду видеосигнала на экране осциллографа. Если обозначить через  $L_M$ высоту видеосигнала модуляции 
-на экране, а $P_M$ -- величину модулированной компоненты СВЧ-мощности, то коэффициент усиления $A$ будет равен  $\frac{L_M}{P_M}$. Если учесть такого рода амплитудную калибровку, высота сигнала ЭПР на экране осциллографа может быть записана как
+Введем технический коэффициент $A$, характеризующий коэффициент усиления тракта <<детектор-усилитель-осциллограф>>. Его величину можно измерить, подавая известный по величине модулированный СВЧ-сигнал на детекторную головку и измеряя при этом амплитуду видеосигнала на экране осциллографа. Для калибровки тракта усиления использовали режим модуляции СВЧ-генератора меандром. Такой режим модуляции позволяет получить в схеме возбуждение резонатора переменным СВЧ-сигналом, амплитудный размах которого будет совпадать с реализованным ранее случаем непрерывного возбуждения. Таким образом, регистрация СВЧ-меандра как искусственно вводимого в систему эталонного переменного сигнала позволяет по существу прокалибровать вертикальную ось шкалы осциллографа и позволяет провести сравнение эталонного размаха меандром $L_M$ и наблюдаемого сигнала поглощения $L_C$. Коэффициент усиления $A$ будет равен  $\frac{L_M}{P_M}$. Если учесть такого рода амплитудную калибровку, высота сигнала ЭПР на экране осциллографа может быть записана как
 \begin{equation}
     \label{eq:16}
     L_{C} = A P_n \cdot 4 \pi Q \eta \chi''(\omega_{0})
@@ -295,31 +287,31 @@
     N_0 = \frac{3KT}{8\pi Q \mu^2 \omega_{0} T_2^*} \cdot \frac{L_C}{L_M}  \cdot \frac{P_M}{P_n} \cdot \frac{V_{\text{рез}}}{V_{\text{обр}}}
 \end{equation}
 
-Для рассматриваемой установки $Q=5000$, $\frac{V_\text{рез}}{V_\text{обр}} \approx 200$ для образца дифенила, $ \frac{P_M}{P_n}\approx1$.
+Для рассматриваемой установки $Q=5000$, $\frac{V_\text{рез}}{V_\text{обр}} \approx 200$ для образца дифенила, $ \frac{P_M}{P_n}\approx1$, $\mu - \text{ магнетон Бора}$.
 
 Измерив значение модулированного сигнала $L_M=0.52$ В и значение сигнала ЭПР $L_c=0.02$ В, можем рассчитать значение $N_0$:
 
 \begin{equation}
-  N_0 = \frac{3\cdot [1.38\cdot10^{-16} \text{ эрг}\cdot\text{K}^{-1}]\cdot [300 \text{ K}]\cdot 200}{8\pi \cdot 5000 \cdot [8.6\cdot 10^{-41} \text{ эрг}^2\text{ Гс}^{-2}]\cdot [2\pi\cdot 7.982\cdot 10^9 \text{ Гц} ]\cdot [6.5 \cdot 10^{-9} \text{ с}]}\cdot \frac{0.02 \text{ В}}{0.52 \text{ В}}
+  N_0 = \frac{3\cdot [1.38\cdot10^{-16} \text{ эрг}\cdot\text{K}^{-1}]\cdot [300 \text{ K}]\cdot 200}{8\pi \cdot 5000 \cdot [8.6\cdot 10^{-41} \text{ эрг}^2\text{ Гс}^{-2}]\cdot [2\pi\cdot 9.13\cdot 10^9 \text{ Гц} ]\cdot [6.5 \cdot 10^{-9} \text{ с}]}\cdot \frac{4.4\cdot 0.005 \text{ В}}{4.4\cdot 0.2 \text{ В}}
 \end{equation}
 
-Расчетное значение составило $N_0=2.71\cdot 10^{20} \text{ Гс}^2 \text{ эрг}^{-1}=2.71\cdot 10^{20} \text{ см}^{-3}$.
+Расчетное значение составило $N_0=1.16\cdot 10^{20} \text{ Гс}^2 \text{ эрг}^{-1}=1.16\cdot 10^{20} \text{ см}^{-3}$.
 
 
 \section{Исследование ЭПР в кристалле рубина}
 
 Аналогично эксперименту с образцом дифенила была проведена настройка тракта. После настройки частота СВЧ-колебаний в тракте составила
 \begin{equation}
-  f_2=9.162 \text{ ГГц}
+  f_2=9.13 \text{ ГГц}
 \end{equation}
-Измерив ток через катушки электромагнита при наблюдении двух резонансных переходов на осциллограмме, по градуировочной характеристике электромагнита $H(I)=17.5\cdot I+ 187.5$ были найдены резонансные значения поля:
+Измерив ток через катушки электромагнита при наблюдении двух резонансных переходов на осциллограмме, по градуировочной характеристике электромагнита были найдены резонансные значения поля:
 \begin{equation}
-  I_\text{рез1}=0.109 \text{ А}  \quad\Rightarrow\quad
-  H_\text{рез1}=2095 \text{ Гс}
+  I_\text{рез1}=0.037 \text{ А}  \quad\Rightarrow\quad
+  H_\text{рез1}=850 \text{ Гс}
 \end{equation}
 \begin{equation}
-  I_\text{рез2}=0.052 \text{ А}  \quad\Rightarrow\quad
-  H_\text{рез2}=1097 \text{ Гс}
+  I_\text{рез2}=0.160 \text{ А}  \quad\Rightarrow\quad
+  H_\text{рез2}=3600 \text{ Гс}
 \end{equation}
 
 % \subsection{Получение сигналов ЭПР для случая, когда ось кристалла ориентирована параллельно направлению постоянного магнитного поля}
@@ -336,53 +328,54 @@
               \frac{2\pi\hbar}{g\beta_B}\cdot 2.3 \text{ ГГц}\approx 820 \text{ Гс}
 \end{equation}
 где $D/(2\pi \hbar)=5.736\text{ ГГц}$.
-А для перехода $-1/2 \rightarrow 1/2$ \cite[там же]{mar}
+А для перехода $-1/2 \rightarrow 1/2$ \cite[стр. 24]{mar}
 \begin{equation}
   H_0^{(2)} = \frac{\hbar\omega}{g\beta_B} = \frac{2\pi\hbar}{g\beta_B}f_2 =
-  \frac{2\pi\hbar}{g\beta_B}\cdot 9.162 \text{ ГГц}\approx 3200 \text{ Гс}
+  \frac{2\pi\hbar}{g\beta_B}\cdot 9.13 \text{ ГГц}\approx 3188 \text{ Гс}
 \end{equation}
 Следовательно, для перехода $-1/2 \rightarrow 1/2$ резонансное поле больше, чем для $3/2 \rightarrow 1/2$.
 
 
 \subsection{Ширина линии поглощения перехода $3/2 \rightarrow 1/2$}
-Ширина была измерена аналогично ширине линии поглощения дифенила. Сдвиг на одну клетку максимума сигнала соответствовал изменению тока c $51$ мА на $54$ мА, или при пересчете изменению поля $\delta H = 52.5$ Гс. 
+Ширина была измерена аналогично ширине линии поглощения дифенила. Сдвиг сигнала на $\Delta L=15 \text{ делений}$, соотвествует изменению тока $\Delta I=0,007 \text{ А}\to  \Delta H=155 \text{ Гс}$.
 
-Измеренная ширина $\delta h=1.4$ клетки, отсюда
-\begin{equation} 
-   \delta H = 73.5 \text{ Гс}
- \end{equation} 
+Измеренная ширина $\delta L=4.5 \text{ деления}$, тогда
+\begin{equation}
+\delta H = \frac{\Delta H\cdot \delta L}{\Delta L}=\frac{155 Гс\cdot 4.5}{15}\approx 47 \text{ Гс}
+\end{equation}
+
 Тогда можно найти ширину в единицах частоты и выразить время поперечной релаксации:
  \begin{equation}
-  \delta \omega = \frac{g\beta_B}{\hbar} \delta H = \frac{|e|}{m_e c} \delta H = 1.28 \cdot 10^9 \,\,\frac{\text{рад}}{\text{с}}
+  \delta \omega = \frac{g\beta_B}{\hbar} \delta H = \frac{|e|}{m_e c} \delta H = 0.82 \cdot 10^9 \,\,\frac{\text{рад}}{\text{с}}
   \quad \Rightarrow \quad
-  T_2 = \frac{2}{\delta \omega} \approx 1.5 \text{ нс}
+  T_2 = \frac{2}{\delta \omega} \approx 2.34 \text{ нс}
 \end{equation}
 
 \subsection{Измерение отношения интенсивностей сигналов ЭПР}
 
 Измерение интенсивностей переходов по высоте сигнала на экране осциллографа дало:
 \begin{equation}
-  I_{\frac{-1}{2}\to\frac12} = 1.5 \text{ кл.}, \quad
-  I_{\frac{3}{2}\to\frac12} = 2 \text{ кл.} 
+  I_{\frac{-1}{2}\to\frac12} = 6 \text{ у.е.}, \quad
+  I_{\frac{3}{2}\to\frac12} = 10 \text{ у.е.} 
   \quad \Rightarrow \quad
-  \frac{I_{\frac{-1}{2}\to\frac12}}{I_{\frac{3}{2}\to\frac12}}=0.75\approx 1.33^{-1}
+  \frac{I_{\frac{-1}{2}\to\frac12}}{I_{\frac{3}{2}\to\frac12}}=0.6\approx 1.66^{-1}
 \end{equation}
 
 \subsection{Определение числа парамагнитных частиц}
 Для рассматриваемой установки  $Q=5000$, $\frac{V_\text{рез}}{V_\text{обр}} \approx 30$ для кристалла рубина, $ \frac{P_M}{P_n}\approx1$. 
 
-Измерив значение модулированного сигнала $L_M=0.38$ В и значение сигнала ЭПР $L_c=0.011$ В, можем рассчитать значение $N_0$:
+Измерив значение модулированного сигнала $L_M=6.2 \cdot 0.2$ В и значение сигнала ЭПР $L_c=2\cdot 0.005$ В, можем рассчитать значение $N_0$:
 
 \begin{equation}
   \frac{3\cdot [1.38\cdot10^{-16} \text{ эрг}\cdot\text{K}^{-1}]\cdot [300 \text{ K}]\cdot 30}{8\pi \cdot 5000 \cdot [8.6\cdot 10^{-41} \text{ эрг}^2\text{ Гс}^{-2}]\cdot [2\pi\cdot 9.162\cdot 10^9 \text{ Гц} ]\cdot [1.5 \cdot 10^{-9} \text{ с}]}\cdot \frac{0.011 \text{ В}}{0.38 \text{ В}}
 \end{equation}
-Расчетное значение составило $N_0=1.15\cdot 10^{20} \text{ Гс}^2 \text{ эрг}^{-1}=1.15\cdot 10^{20} \text{ см}^{-3}$.
+Расчетное значение составило $N_0=0.2\cdot 10^{20} \text{ Гс}^2 \text{ эрг}^{-1}=0.2\cdot 10^{20} \text{ см}^{-3}$.
 
 \addcontentsline{toc}{section}{Заключение}
 \section*{Заключение}
 В настоящей работе мы исследовали спектр поглощения парамагнетиков: дифенила и кристалла рубина (с фиксированной осью кристалла вдоль поля). Для образцов определены вид кривых дисперсии и поглощения, ширины кривых поглощения, частоты резонансного перехода, времена поперечной релаксации и оценено количество парамагнитных частиц.
 
-Сопоставление с теорией позволяет заключить о наличии неоднородного уширения линии поглощения дифенила. Для кристалла рубина теоретические значения резонансного поля по порядку совпадают с практическими.
+Сопоставление с теорией позволяет заключить о наличии неоднородного уширения линии поглощения дифенила. Для кристалла рубина теоретические значения резонансного поля по порядку совпадают с экспериментальными.
 
 \begin{thebibliography}{}
 
